# hermesdm

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  SDD-004-fix-setup-generation-echo-bug.md  SDD-004-v2-fix-setup-generation-echo-bug-ROBUST.md  SDD-005-v1-fix-gameplay-action-narrative-integration.md  SDD-BEGIN-README-FIX.md  SPEC.md  SPEC_ACTIONS_SYSTEM.md  SPEC_DEATH_SAVES_PERSISTENCE.md  SPEC_DICE_ANIMATION.md  SPEC_DND5E_SYSTEMS.md  SPEC_HERMESDM_PROFILE.md  SPEC_IMAGE_GENERATION.md  SPEC_NARRATIVE_AUTO.md  SPEC_NPC_PERSISTENCE.md  SPEC_PACING_SYSTEM.md  SPEC_PLAN_B.md  SPEC_SPELL_SLOTS.md  campaign_settings.py  hermesdm_plan_b.py  hermesdm_runner.py  main.py  pyproject.toml  requirements.txt  start_bot.sh  test_e2e_4bots.py
.github/: WORKFLOW.md
.skills/: batch-codebase-audit.md
bot/: __init__.py  audit_logger.py  character_sheet.py  character_sheet.py.bak  character_sheet_helpers.py  combat_engine.py  config_commands.py  dice_animation.py  game_commands.py  save_command.py  spell_manager.py  telegram_handler.py  telegram_handler.py.bak
dm/: __init__.py  choice_tracker.py  class_features.py  combat_flow.py  conditions.py  dungeon_generator.py  encounter_engine.py  enemy_pool.py  enemy_turn.py  image_event_handler.py  image_generator.py  image_prompt_builder.py  image_provider.py  location_graph.py  loot_tables.py  monster_manual.py  narrative_generator.py  narrative_generator.py.bak  npc_director.py  npc_memory.py  pacing_engine.py  provider_client.py  quest_engine.py  reactions.py  resource_manager.py  scene_director.py  spell_engine.py  spellbook.py  story_arc.py  world_builder.py  world_builder.py.bak  xp_engine.py
profile/: SOUL.md  VERSION  config.yaml
scripts/: audit_viewer.py  detect_group.py  dm_session.py  install.py  setup_web.py  test_e2e_state_persistence.py  test_e2e_telegram_bots.py
skill/: SKILL.md
state/: audit_20260419.jsonl  audit_20260420.jsonl  npc_store.py  (+7 more)
(+60 files in other folders)
